# aws-snowflake

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  pyproject.toml  requirements-lock.txt  requirements.txt
.github/workflows/: deploy_pipeline.yml  pr_checks.yml
ci_cd/github_actions/: daily_dq.yml
configs/: __init__.py  settings.py
configs/dev/: README.md
data/sample/: generate_data.py
data_quality/expectations/: dq_checks.py  quality_rules_spec.md
docs/data_contracts/: banking_data_contracts.md
infrastructure/terraform/: iam.tf  main.tf  outputs.tf  s3.tf  terraform.tfvars.example  variables.tf
ingestion/: __init__.py
ingestion/schemas/: __init__.py  banking_schemas.py
ingestion/scripts/: __init__.py  logger.py  run_ingestion.py  s3_uploader.py
orchestration/dags/: 01_ingestion_dag.py  02_bronze_to_silver_dag.py  03_silver_to_gold_dag.py  04_master_pipeline_dag.py  dag_config.py
tests/unit/: test_logger.py
transformation/snowflake/: setup_snowflake.sql
transformation/snowflake/bronze/: 01_raw_tables.sql  02_load_bronze.sql  03_verify_bronze.sql
transformation/snowflake/gold/: 01_gold_tables.sql  02_load_gold.sql  03_scd2_dim_customers.sql
transformation/snowflake/silver/: 01_silver_tables.sql  02_transform_bronze_to_silver.sql  03_reject_records.sql
